fixing card colour and size on mobile devices

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -4,6 +4,57 @@
       font-size: 50px !important;
       color: #FFCB7B;
     }
+
+    .flashcard {
+      transform: scale(1);
+      color: #FFCB7B;
+      perspective: 1000px;
+    }
+
+    .card-inner {
+      transition: transform 1s;
+      transform-style: preserve-3d;
+      cursor: pointer;
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    .card-inner.is-flipped {
+      transform: rotateY(180deg);
+    }
+
+    .card-face {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      overflow: hidden;
+      border-radius: 16px;
+      box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+      background-image: linear-gradient(#560B0B, #560B0B);
+    }
+
+    .card-face-back {
+      transform: rotateY(180deg);
+    }
+
+    .card-content {
+      width: 100%;
+      height: 100%;
+    }
+
+    .card-content::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: -1;
+      border-radius: 0 0 50% 0;
+    }
   }
 
   @media (min-width: 576px) {
